# EMA-BEERs

./: .dockerignore  404.html  README.md  index.html  objects.inv  pyproject.toml  tasks.py
CI/: index.html
cookiecutter/: index.html
docker/: index.html
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: CI.md  cookiecutter.md  docker.md  fastapi.md  hydra.md  index.md  mkdocs.md  pre-commit.md  unit_testing.md  uv.md  wandb.md
fastapi/: index.html
hydra/: index.html
mkdocs/: index.html
pre-commit/: index.html
search/: search_index.json
unit_testing/: index.html
uv/: index.html
wandb/: index.html
